@@ -1,6 +1,9 @@
 **  denotes quite substantial/important changes
 *** denotes really big changes 
 
+Problems: prediction with lpi overlap, and identification between base 
+and shared components
+
 1.8-6
 
 * Generalization of list formula handling to allow linear predictors to
